--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
   <hr class="text-white">
 
   <div class="list-group list-reset">
-    <button class="list-group-item list-group-item-action">valorant</button>
+    <button *ngFor="let name of tags" class="list-group-item list-group-item-action">{{name | titlecase}}</button>
   </div>
 
 </div>
