--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,7 +3,8 @@
   <hr class="text-white">
 
   <div class="list-group list-reset">
-    <button *ngFor="let name of tags" class="list-group-item list-group-item-action">{{name | titlecase}}</button>
+    <button *ngFor="let tag of tags" 
+    (click)="searchTag(tag)"class="list-group-item list-group-item-action">{{tag | titlecase}}</button>
   </div>
 
 </div>
